[package]
name = "asmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-demangle = "0.1.21"
capstone = "0.11.0"
object = "0.28.4"
gimli = "0.26.1"
ddbug_parser = "0.3.0"
colored = "2.0.0"

clap = { version = "3.2.5", features = ["derive"] }

[dependencies.comfy-table]
path = "../comfy-table"
